[project]
name = "multi-armed-bandit-simulator"
version = "0.1.0"
description = " A clean, modular, lightweight simulator for testing and comparing different multi-armed bandit strategies, implemented in Python. It includes key exploration methods like ε-greedy, UCB, and Gradient Bandit, along with plotting and performance evaluation tools."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib==3.10.7",
    "numpy==2.3.4",
]
